--- a/src/root.css
+++ b/src/root.css
@@ -1,40 +1,170 @@
-body {
-  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
+
+* {
+  font-family: Roboto, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
-a {
-  margin-right: 1rem;
+html, body {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(155deg, #55c7ed, #2bb3e0, #3bc1ed);
 }
 
-main {
-  text-align: center;
-  padding: 1em;
-  margin: 0 auto;
+.flexbox {
+  
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-  color: #335d92;
-  text-transform: uppercase;
-  font-size: 4rem;
+.search {
+  margin: 20px;
+}
+
+.search > h1 {
+  color: white;
+  margin-bottom: 10px;
+  text-shadow: 0 1px #0091c2;
+  font-size: x-large
+}
+
+.search > h3 {
+  color: white;
+  margin-bottom: 10px;
+  text-shadow: 0 1px #0091c2;
+  font-size: small;
+}
+
+.search > div {
+  display: inline-block;
+  position: relative;
+  filter: drop-shadow(0 1px #0091c2);
+}
+
+.search > div:after {
+  content: "";
+  background: white;
+  width: 4px;
+  height: 20px;
+  position: absolute;
+  top: 40px;
+  right: 2px;
+  transform: rotate(135deg);
+}
+
+.search > div > input {
+  color: white;
+  font-size: 16px;
+  background: transparent;
+  width: 25px;
+  height: 25px;
+  padding: 10px;
+  border: solid 3px white;
+  outline: none;
+  border-radius: 35px;
+  transition: width 0.5s;
+}
+
+.search > div > input::placeholder {
+  color: #efefef;
+  opacity: 0;
+  transition: opacity 150ms ease-out;
+}
+
+.search > div > input:focus::placeholder {
+  opacity: 1;
+}
+
+.search > div > input:focus,
+.search > div > input:not(:placeholder-shown) {
+  width: 250px;
+}
+
+.blinking-cursor {
   font-weight: 100;
-  line-height: 1.1;
-  margin: 4rem auto;
-  max-width: 14rem;
+  font-size: 30px;
+  color: white;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
 }
 
-p {
-  max-width: 14rem;
-  margin: 2rem auto;
-  line-height: 1.35;
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
 }
 
-@media (min-width: 480px) {
-  h1 {
-    max-width: none;
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
   }
+  50% {
+    color: black;
+  }
+}
 
-  p {
-    max-width: none;
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
   }
+  50% {
+    color: black;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+.wrapper{
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%,-50%);
+}
+
+.container{
+  position: relative;
+  padding: 20px 50px;
+}
+
+
+#main-container {
+  display: block;
+  width: 350px;
+  height: calc(100vh - 2px);
+  float: right;
+}
+
+.df-messenger {
+  z-index: 999;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  width: 350px;
 }
